--- a/f1leaderboard.html
+++ b/f1leaderboard.html
@@ -9,59 +9,84 @@
       font-family: Arial, sans-serif;
       background: url('ifwl_bg.webp') no-repeat center center fixed;
       background-size: cover;
-      margin: 0; padding: 20px;
+      margin: 0;
+      padding: 20px;
     }
-    h1, h2 { text-align: center; color: #000; }
+    h1, h2 {
+      text-align: center;
+      color: #000;
+    }
     .version {
-      position: fixed; top: 10px; left: 10px;
-      font-size: 0.8em; color: #ccc;
+      position: fixed;
+      top: 10px;
+      left: 10px;
+      font-size: 0.8em;
+      color: #ccc;
       background: rgba(255,255,255,0.7);
-      padding: 2px 6px; border-radius: 4px;
+      padding: 2px 6px;
+      border-radius: 4px;
     }
     .header {
-      display: flex; align-items: center; justify-content: center;
-      gap: 20px; margin-bottom: 10px;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      gap: 20px;
+      margin-bottom: 10px;
     }
-    .header img { height: 48px; }
+    .header img {
+      height: 48px;
+    }
     table {
-      width:100%; border-collapse:collapse;
+      width: 100%;
+      border-collapse: collapse;
       background: rgba(0,0,0,0.75);
-      margin:20px 0; border-radius:8px; overflow:hidden;
-      color:#fff;
+      margin: 20px 0;
+      border-radius: 8px;
+      overflow: hidden;
+      color: #fff;
     }
     th, td {
-      padding:10px; text-align:center;
-      vertical-align:middle; border-bottom:1px solid #333;
+      padding: 10px;
+      text-align: center;
+      vertical-align: middle;
+      border-bottom: 1px solid #333;
     }
     th {
-      background:#333; text-transform:uppercase;
-      font-weight:bold; color:#fff;
+      background: #333;
+      text-transform: uppercase;
+      font-weight: bold;
+      color: #fff;
     }
-    tr:hover { background:rgba(255,255,255,0.1); }
+    tr:hover {
+      background: rgba(255,255,255,0.1);
+    }
     img.car {
-      height:48px; /* ← doubled from 24px */
-      vertical-align:middle; margin-right:8px;
+      height: 48px; /* doubled from 24px */
+      vertical-align: middle;
+      margin-right: 8px;
     }
     img.logo {
-      height:40px; float:right; margin-left:10px;
-      opacity:1 !important; filter:none !important;
+      height: 40px;
+      float: right;
+      margin-left: 10px;
+      opacity: 1 !important;
+      filter: none !important;
     }
-    .driver-row { position:relative; }
-
+    .driver-row {
+      position: relative;
+    }
     /* TEAM COLORS */
     .team-ALPINE          { background-color: #0090FF; }
     .team-ASTON-MARTIN   { background-color: #004940; }
     .team-KICK-SAUBER    { background-color: #000000; }
     .team-RED-BULL-RACING,
     .team-RACING-BULLS   { background-color: #1B1443; }
-
-    /* other teams unchanged */
     .team-MERCEDES       { background-color: #00D2BE; }
     .team-MCLAREN        { background-color: #FF8700; }
     .team-FERRARI        { background-color: #DC0000; }
     .team-HAAS           { background-color: #B6BABD; }
     .team-WILLIAMS       { background-color: #005AFF; }
-    .team-RESERVE        { background-color: #FFFFFF; color:black; }
+    .team-RESERVE        { background-color: #FFFFFF; color: black; }
   </style>
 </head>
 <body>
@@ -69,9 +94,9 @@
   <div class="version">Version: Beta 0.0.30</div>
 
   <div class="header">
-    <img src="ifwl_logo.png" alt="IFWL Logo">
+    <img src="ifwl_logo.png" alt="IFWL Logo" />
     <h1>IFWL F1 Leaderboard</h1>
-    <img src="ifwl_logo.png" alt="IFWL Logo">
+    <img src="ifwl_logo.png" alt="IFWL Logo" />
   </div>
 
   <h2>Driver Standings</h2>
@@ -99,31 +124,41 @@
   <script>
     const sheetId = "1OxEy3fx4fW1P-aPlU-AHlPR8r23KJieLKxdtKy4koog";
     const teamCars = {
-      "ALPINE":"ALPINE.webp","ASTON MARTIN":"ASTON.webp",
-      "FERRARI":"FERRARI.webp","HAAS":"HAAS.webp",
-      "MCLAREN":"MCLAREN.webp","MERCEDES":"MERCEDES.webp",
-      "RACING BULLS":"RACINGBULLS.webp","RED BULL RACING":"RBR.webp",
-      "KICK SAUBER":"SAUBER.webp","RESERVE":"RESERVE.webp",
-      "WILLIAMS":"WILLIAMS.webp"
+      "ALPINE": "ALPINE.webp",
+      "ASTON MARTIN": "ASTON.webp",
+      "FERRARI": "FERRARI.webp",
+      "HAAS": "HAAS.webp",
+      "MCLAREN": "MCLAREN.webp",
+      "MERCEDES": "MERCEDES.webp",
+      "RACING BULLS": "RACINGBULLS.webp",
+      "RED BULL RACING": "RBR.webp",
+      "KICK SAUBER": "SAUBER.webp",
+      "RESERVE": "RESERVE.webp",
+      "WILLIAMS": "WILLIAMS.webp"
     };
     const teamLogos = {
-      "ALPINE":"ALPINELOGO.webp","ASTON MARTIN":"ASTONLOGO.webp",
-      "FERRARI":"FERARRILOGO.webp","HAAS":"HAASLOGO.webp",
-      "MCLAREN":"MCLARENLOGO.webp","MERCEDES":"MERCEDESLOGO.webp",
-      "RACING BULLS":"RBLOGO.webp","RED BULL RACING":"RBRLOGO.webp",
-      "KICK SAUBER":"KICKLOGO.webp","RESERVE":"RESERVELOGO.webp",
-      "WILLIAMS":"WILLIAMSLOGO.webp"
+      "ALPINE": "ALPINELOGO.webp",
+      "ASTON MARTIN": "ASTONLOGO.webp",
+      "FERRARI": "FERARRILOGO.webp",
+      "HAAS": "HAASLOGO.webp",
+      "MCLAREN": "MCLARENLOGO.webp",
+      "MERCEDES": "MERCEDESLOGO.webp",
+      "RACING BULLS": "RBLOGO.webp",
+      "RED BULL RACING": "RBRLOGO.webp",
+      "KICK SAUBER": "KICKLOGO.webp",
+      "RESERVE": "RESERVELOGO.webp",
+      "WILLIAMS": "WILLIAMSLOGO.webp"
     };
 
     function safeClass(team) {
-      return "team-" + team.toUpperCase().replace(/ /g,"-");
+      return "team-" + team.toUpperCase().replace(/ /g, "-");
     }
 
     fetch(`https://docs.google.com/spreadsheets/d/${sheetId}/gviz/tq?tqx=out:json`)
-      .then(r=>r.text())
-      .then(t=>JSON.parse(t.substr(47).slice(0,-2)))
-      .then(j=>{
-        const rows = j.table.rows.map(r=>r.c.map(c=>c?.v||""));
+      .then(res => res.text())
+      .then(txt => JSON.parse(txt.substr(47).slice(0, -2)))
+      .then(json => {
+        const rows = json.table.rows.map(r => r.c.map(c => c?.v || ""));
         const dBody = document.querySelector("#driver-table tbody");
         const cBody = document.querySelector("#constructor-table tbody");
         const uBody = document.querySelector("#unassigned-table tbody");
@@ -131,39 +166,47 @@
         const totals = {};
 
         rows.forEach(r => {
-          const driver = r[0], team = r[1], pts = parseInt(r[18])||0;
+          const driver = r[0],
+                team   = r[1] || "",
+                norm   = team.toUpperCase().trim(),
+                pts    = parseInt(r[18]) || 0;
+
           if (!driver) return;
+
           if (!team) {
             uBody.innerHTML += `<tr><td>${driver}</td></tr>`;
             return;
           }
-          totals[team] = (totals[team]||0) + pts;
+
+          totals[norm] = (totals[norm] || 0) + pts;
+
           const tr = document.createElement("tr");
-          tr.className = "driver-row " + safeClass(team);
+          tr.className = "driver-row " + safeClass(norm);
           tr.innerHTML = `
             <td>${driver}</td>
             <td>
-              <img src="${teamCars[team]}" class="car" alt="${team}">
+              <img src="${teamCars[norm]}" class="car" alt="${team}" />
               ${team}
-              <img src="${teamLogos[team]}" class="logo" alt="${team}">
+              <img src="${teamLogos[norm]}" class="logo" alt="${team}" />
             </td>
             <td>${pts}</td>`;
           dBody.appendChild(tr);
         });
 
-        Object.entries(totals).forEach(([team, total]) => {
+        Object.entries(totals).forEach(([team, pts]) => {
           const tr = document.createElement("tr");
           tr.className = "driver-row " + safeClass(team);
           tr.innerHTML = `
             <td>
-              <img src="${teamCars[team]}" class="car" alt="${team}">
+              <img src="${teamCars[team]}" class="car" alt="${team}" />
               ${team}
-              <img src="${teamLogos[team]}" class="logo" alt="${team}">
+              <img src="${teamLogos[team]}" class="logo" alt="${team}" />
             </td>
-            <td>${total}</td>`;
+            <td>${pts}</td>`;
           cBody.appendChild(tr);
         });
       });
   </script>
+
 </body>
 </html>
