--- a/f1leaderboard.html
+++ b/f1leaderboard.html
@@ -1,3 +1,4 @@
+```html
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -36,6 +37,23 @@
     .header img {
       height: 48px;
     }
+    .join-series {
+      text-align: center;
+      margin: 15px 0;
+    }
+    .join-series a {
+      display: inline-block;
+      background: #1B1443;
+      color: #fff;
+      padding: 10px 20px;
+      text-decoration: none;
+      font-weight: bold;
+      border-radius: 4px;
+      transition: background 0.2s ease;
+    }
+    .join-series a:hover {
+      background: #332060;
+    }
     table {
       width: 100%;
       border-collapse: collapse;
@@ -61,7 +79,7 @@
       background: rgba(255,255,255,0.1);
     }
     img.car {
-      height: 48px; /* doubled from 24px */
+      height: 48px;
       vertical-align: middle;
       margin-right: 8px;
     }
@@ -91,12 +109,18 @@
 </head>
 <body>
 
-  <div class="version">Version: Beta 0.0.35</div>
+  <div class="version">Version: Beta 0.0.36</div>
 
   <div class="header">
     <img src="ifwl_logo.png" alt="IFWL Logo" />
     <h1>IFWL F1 Leaderboard</h1>
     <img src="ifwl_logo.png" alt="IFWL Logo" />
+  </div>
+
+  <div class="join-series">
+    <a href="https://www.thesimgrid.com/championships/15239" target="_blank">
+      Join our latest series here
+    </a>
   </div>
 
   <h2>Driver Standings</h2>
@@ -181,7 +205,7 @@
           totals[norm] = (totals[norm] || 0) + pts;
 
           const tr = document.createElement("tr");
-          tr.className = "driver-row " + safeClass(norm);
+          tr.className = `driver-row ${safeClass(norm)}`;
           tr.innerHTML = `
             <td>${driver}</td>
             <td>
@@ -195,7 +219,7 @@
 
         Object.entries(totals).forEach(([team, pts]) => {
           const tr = document.createElement("tr");
-          tr.className = "driver-row " + safeClass(team);
+          tr.className = `driver-row ${safeClass(team)}`;
           tr.innerHTML = `
             <td>
               <img src="${teamCars[team]}" class="car" alt="${team}" />
@@ -210,3 +234,4 @@
 
 </body>
 </html>
+```
