--- a/f1leaderboard.html
+++ b/f1leaderboard.html
@@ -1,4 +1,3 @@
-```html
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -79,7 +78,7 @@
       background: rgba(255,255,255,0.1);
     }
     img.car {
-      height: 48px;
+      height: 48px; /* doubled from 24px */
       vertical-align: middle;
       margin-right: 8px;
     }
@@ -89,6 +88,17 @@
       margin-left: 10px;
       opacity: 1 !important;
       filter: none !important;
+    }
+    .driver-number {
+      display: inline-block;
+      font-size: 1.5em;
+      font-weight: bold;
+      margin-right: 8px;
+      vertical-align: middle;
+      color: #fff;
+      background: rgba(0,0,0,0.5);
+      padding: 2px 6px;
+      border-radius: 4px;
     }
     .driver-row {
       position: relative;
@@ -190,24 +200,31 @@
         const totals = {};
 
         rows.forEach(r => {
-          const driver = r[0],
-                team   = r[1] || "",
-                norm   = team.toUpperCase().trim(),
-                pts    = parseInt(r[18]) || 0;
+          // parse driver name and bracketed number
+          const raw = (r[0] || "").trim();
+          const numMatch = raw.match(/\\[\\s*(\\d+)\\s*\\]/);
+          const driverNum = numMatch ? numMatch[1] : "";
+          const driverName = raw.replace(/\\[\\s*\\d+\\s*\\]\\s*-?\\s*/, "") || raw;
 
-          if (!driver) return;
+          const team = r[1] || "";
+          const norm = team.toUpperCase().trim();
+          const pts = parseInt(r[18]) || 0;
 
+          if (!driverName) return;
           if (!team) {
-            uBody.innerHTML += `<tr><td>${driver}</td></tr>`;
+            uBody.innerHTML += `<tr><td>${driverName}</td></tr>`;
             return;
           }
 
           totals[norm] = (totals[norm] || 0) + pts;
 
           const tr = document.createElement("tr");
-          tr.className = `driver-row ${safeClass(norm)}`;
+          tr.className = "driver-row " + safeClass(norm);
           tr.innerHTML = `
-            <td>${driver}</td>
+            <td>
+              ${driverNum ? `<span class="driver-number">${driverNum}</span>` : ""}
+              ${driverName}
+            </td>
             <td>
               <img src="${teamCars[norm]}" class="car" alt="${team}" />
               ${team}
@@ -219,7 +236,7 @@
 
         Object.entries(totals).forEach(([team, pts]) => {
           const tr = document.createElement("tr");
-          tr.className = `driver-row ${safeClass(team)}`;
+          tr.className = "driver-row " + safeClass(team);
           tr.innerHTML = `
             <td>
               <img src="${teamCars[team]}" class="car" alt="${team}" />
@@ -234,4 +251,3 @@
 
 </body>
 </html>
-```
