--- a/f1leaderboard.html
+++ b/f1leaderboard.html
@@ -1,3 +1,4 @@
+```html
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -119,7 +120,7 @@
 </head>
 <body>
 
-  <div class="version">Version: Beta 0.0.36</div>
+  <div class="version">Version: Beta 0.0.37</div>
 
   <div class="header">
     <img src="ifwl_logo.png" alt="IFWL Logo" />
@@ -251,3 +252,4 @@
 
 </body>
 </html>
+```
