--- a/f1leaderboard.html
+++ b/f1leaderboard.html
@@ -1,4 +1,3 @@
-```html
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -49,10 +48,6 @@
       text-decoration: none;
       font-weight: bold;
       border-radius: 4px;
-      transition: background 0.2s ease;
-    }
-    .join-series a:hover {
-      background: #332060;
     }
     table {
       width: 100%;
@@ -73,13 +68,12 @@
       background: #333;
       text-transform: uppercase;
       font-weight: bold;
-      color: #fff;
     }
     tr:hover {
       background: rgba(255,255,255,0.1);
     }
     img.car {
-      height: 48px; /* doubled from 24px */
+      height: 48px; /* doubled */
       vertical-align: middle;
       margin-right: 8px;
     }
@@ -101,9 +95,7 @@
       padding: 2px 6px;
       border-radius: 4px;
     }
-    .driver-row {
-      position: relative;
-    }
+    .driver-row { position: relative; }
     /* TEAM COLORS */
     .team-ALPINE          { background-color: #0090FF; }
     .team-ASTON-MARTIN   { background-color: #004940; }
@@ -120,7 +112,7 @@
 </head>
 <body>
 
-  <div class="version">Version: Beta 0.0.37</div>
+  <div class="version">Version: Beta 0.0.37 (Number Badges)</div>
 
   <div class="header">
     <img src="ifwl_logo.png" alt="IFWL Logo" />
@@ -159,90 +151,68 @@
   <script>
     const sheetId = "1OxEy3fx4fW1P-aPlU-AHlPR8r23KJieLKxdtKy4koog";
     const teamCars = {
-      "ALPINE": "ALPINE.webp",
-      "ASTON MARTIN": "ASTON.webp",
-      "FERRARI": "FERRARI.webp",
-      "HAAS": "HAAS.webp",
-      "MCLAREN": "MCLAREN.webp",
-      "MERCEDES": "MERCEDES.webp",
-      "RACING BULLS": "RACINGBULLS.webp",
-      "RED BULL RACING": "RBR.webp",
-      "KICK SAUBER": "SAUBER.webp",
-      "RESERVE": "RESERVE.webp",
-      "WILLIAMS": "WILLIAMS.webp"
+      "ALPINE":"ALPINE.webp","ASTON MARTIN":"ASTON.webp","FERRARI":"FERRARI.webp",
+      "HAAS":"HAAS.webp","MCLAREN":"MCLAREN.webp","MERCEDES":"MERCEDES.webp",
+      "RACING BULLS":"RACINGBULLS.webp","RED BULL RACING":"RBR.webp",
+      "KICK SAUBER":"SAUBER.webp","RESERVE":"RESERVE.webp","WILLIAMS":"WILLIAMS.webp"
     };
     const teamLogos = {
-      "ALPINE": "ALPINELOGO.webp",
-      "ASTON MARTIN": "ASTONLOGO.webp",
-      "FERRARI": "FERARRILOGO.webp",
-      "HAAS": "HAASLOGO.webp",
-      "MCLAREN": "MCLARENLOGO.webp",
-      "MERCEDES": "MERCEDESLOGO.webp",
-      "RACING BULLS": "RBLOGO.webp",
-      "RED BULL RACING": "RBRLOGO.webp",
-      "KICK SAUBER": "KICKLOGO.webp",
-      "RESERVE": "RESERVELOGO.webp",
-      "WILLIAMS": "WILLIAMSLOGO.webp"
+      "ALPINE":"ALPINELOGO.webp","ASTON MARTIN":"ASTONLOGO.webp","FERRARI":"FERARRILOGO.webp",
+      "HAAS":"HAASLOGO.webp","MCLAREN":"MCLARENLOGO.webp","MERCEDES":"MERCEDESLOGO.webp",
+      "RACING BULLS":"RBLOGO.webp","RED BULL RACING":"RBRLOGO.webp",
+      "KICK SAUBER":"KICKLOGO.webp","RESERVE":"RESERVELOGO.webp","WILLIAMS":"WILLIAMSLOGO.webp"
     };
 
-    function safeClass(team) {
-      return "team-" + team.toUpperCase().replace(/ /g, "-");
-    }
+    function safeClass(team){ return "team-"+team.toUpperCase().replace(/ /g,"-"); }
 
     fetch(`https://docs.google.com/spreadsheets/d/${sheetId}/gviz/tq?tqx=out:json`)
-      .then(res => res.text())
-      .then(txt => JSON.parse(txt.substr(47).slice(0, -2)))
-      .then(json => {
-        const rows = json.table.rows.map(r => r.c.map(c => c?.v || ""));
-        const dBody = document.querySelector("#driver-table tbody");
-        const cBody = document.querySelector("#constructor-table tbody");
-        const uBody = document.querySelector("#unassigned-table tbody");
-        dBody.innerHTML = cBody.innerHTML = uBody.innerHTML = "";
-        const totals = {};
+      .then(r=>r.text())
+      .then(txt=>JSON.parse(txt.substr(47).slice(0,-2)))
+      .then(json=>{
+        const rows = json.table.rows.map(r=>r.c.map(c=>c?.v||""));
+        const dBody=document.querySelector("#driver-table tbody"),
+              cBody=document.querySelector("#constructor-table tbody"),
+              uBody=document.querySelector("#unassigned-table tbody");
+        dBody.innerHTML=cBody.innerHTML=uBody.innerHTML="";
+        const totals={};
 
-        rows.forEach(r => {
-          // parse driver name and bracketed number
-          const raw = (r[0] || "").trim();
-          const numMatch = raw.match(/\\[\\s*(\\d+)\\s*\\]/);
-          const driverNum = numMatch ? numMatch[1] : "";
-          const driverName = raw.replace(/\\[\\s*\\d+\\s*\\]\\s*-?\\s*/, "") || raw;
-
-          const team = r[1] || "";
-          const norm = team.toUpperCase().trim();
-          const pts = parseInt(r[18]) || 0;
-
-          if (!driverName) return;
-          if (!team) {
-            uBody.innerHTML += `<tr><td>${driverName}</td></tr>`;
+        rows.forEach(r=>{
+          const raw=(r[0]||"").trim();
+          const match = raw.match(/\[\s*(\d+)\s*\]/);
+          const num   = match? match[1] : "";
+          const name  = raw.replace(/\[\s*\d+\s*\]\s*-\s*/,"");
+          const team  = (r[1]||"").trim();
+          const pts   = parseInt(r[18])||0;
+          if(!raw) return;
+          if(!team){
+            uBody.innerHTML += `<tr><td>${name}</td></tr>`;
             return;
           }
-
-          totals[norm] = (totals[norm] || 0) + pts;
-
+          totals[team] = (totals[team]||0)+pts;
           const tr = document.createElement("tr");
-          tr.className = "driver-row " + safeClass(norm);
-          tr.innerHTML = `
+          tr.className = "driver-row "+safeClass(team);
+          tr.innerHTML=`
             <td>
-              ${driverNum ? `<span class="driver-number">${driverNum}</span>` : ""}
-              ${driverName}
+              ${num?`<span class="driver-number">${num}</span>`:""}
+              ${name}
             </td>
             <td>
-              <img src="${teamCars[norm]}" class="car" alt="${team}" />
+              <img src="${teamCars[team]}" class="car"  alt="${team}"/>
               ${team}
-              <img src="${teamLogos[norm]}" class="logo" alt="${team}" />
+              <img src="${teamLogos[team]}" class="logo" alt="${team}"/>
             </td>
             <td>${pts}</td>`;
           dBody.appendChild(tr);
         });
 
-        Object.entries(totals).forEach(([team, pts]) => {
+        Object.entries(totals).forEach(([team,pts])=>{
           const tr = document.createElement("tr");
-          tr.className = "driver-row " + safeClass(team);
-          tr.innerHTML = `
+          tr.className = "driver-row "+safeClass(team);
+          tr.innerHTML=`
             <td>
-              <img src="${teamCars[team]}" class="car" alt="${team}" />
+              <img src="${teamCars[team]}" class="car"  alt="${team}"/>
               ${team}
-              <img src="${teamLogos[team]}" class="logo" alt="${team}" />
+              <img src="${teamLogos[team]}" class="logo" alt="${team}"/>
             </td>
             <td>${pts}</td>`;
           cBody.appendChild(tr);
@@ -252,4 +222,3 @@
 
 </body>
 </html>
-```
