--- a/f1leaderboard.html
+++ b/f1leaderboard.html
@@ -2,122 +2,82 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <meta name="viewport" content="width=device-width,initial-scale=1.0"/>
   <title>IFWL F1 Leaderboard</title>
   <style>
     body {
-      font-family: Arial, sans-serif;
-      background: url('ifwl_bg.webp') no-repeat center center fixed;
-      background-size: cover;
-      margin: 0;
-      padding: 20px;
+      margin:0; padding:20px;
+      font-family:Arial,sans-serif;
+      background:url('ifwl_bg.webp')no-repeat center center fixed;
+      background-size:cover;
     }
-    h1, h2 {
-      text-align: center;
-      color: #000;
-    }
+    h1,h2 { text-align:center; color:#000; margin:8px 0; }
     .version {
-      position: fixed;
-      top: 10px;
-      left: 10px;
-      font-size: 0.8em;
-      color: #ccc;
-      background: rgba(255,255,255,0.7);
-      padding: 2px 6px;
-      border-radius: 4px;
+      position:fixed; top:10px; left:10px;
+      background:rgba(255,255,255,0.7); padding:2px 6px;
+      font-size:0.8em; border-radius:4px;
     }
     .header {
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      gap: 20px;
-      margin-bottom: 10px;
+      display:flex; align-items:center; justify-content:center;
+      gap:20px; margin-bottom:10px;
     }
-    .header img {
-      height: 48px;
-    }
-    .join-series {
-      text-align: center;
-      margin: 15px 0;
-    }
+    .header img { height:48px; }
+    .join-series { text-align:center; margin:12px 0; }
     .join-series a {
-      display: inline-block;
-      background: #1B1443;
-      color: #fff;
-      padding: 10px 20px;
-      text-decoration: none;
-      font-weight: bold;
-      border-radius: 4px;
+      background:#1B1443; color:#fff; text-decoration:none;
+      padding:10px 20px; border-radius:4px; font-weight:bold;
     }
     table {
-      width: 100%;
-      border-collapse: collapse;
-      background: rgba(0,0,0,0.75);
-      margin: 20px 0;
-      border-radius: 8px;
-      overflow: hidden;
-      color: #fff;
+      width:100%; border-collapse:collapse;
+      background:rgba(0,0,0,0.75); margin:20px 0;
+      border-radius:8px; overflow:hidden; color:#fff;
     }
-    th, td {
-      padding: 10px;
-      text-align: center;
-      vertical-align: middle;
-      border-bottom: 1px solid #333;
+    th,td {
+      padding:10px; text-align:center;
+      border-bottom:1px solid #333;
     }
     th {
-      background: #333;
-      text-transform: uppercase;
-      font-weight: bold;
+      background:#333; text-transform:uppercase;
+      font-weight:bold;
     }
-    tr:hover {
-      background: rgba(255,255,255,0.1);
-    }
+    tr:hover { background:rgba(255,255,255,0.1); }
     img.car {
-      height: 48px; /* doubled */
-      vertical-align: middle;
-      margin-right: 8px;
+      height:48px; vertical-align:middle; margin-right:8px;
     }
     img.logo {
-      height: 40px;
-      float: right;
-      margin-left: 10px;
-      opacity: 1 !important;
-      filter: none !important;
+      height:40px; float:right; margin-left:10px;
+      opacity:1!important; filter:none!important;
     }
     .driver-number {
-      display: inline-block;
-      font-size: 1.5em;
-      font-weight: bold;
-      margin-right: 8px;
-      vertical-align: middle;
-      color: #fff;
-      background: rgba(0,0,0,0.5);
-      padding: 2px 6px;
-      border-radius: 4px;
+      display:inline-block; font-size:1.5em;
+      font-weight:bold; margin-right:8px;
+      vertical-align:middle; color:#fff;
+      background:rgba(0,0,0,0.5); padding:2px 6px;
+      border-radius:4px;
     }
-    .driver-row { position: relative; }
-    /* TEAM COLORS */
-    .team-ALPINE          { background-color: #0090FF; }
-    .team-ASTON-MARTIN   { background-color: #004940; }
-    .team-KICK-SAUBER    { background-color: #000000; }
+    .driver-row {}
+    /* Team Colours */
+    .team-ALPINE         { background-color:#0090FF; }
+    .team-ASTON-MARTIN  { background-color:#004940; }
+    .team-KICK-SAUBER   { background-color:#000000; }
     .team-RED-BULL-RACING,
-    .team-RACING-BULLS   { background-color: #1B1443; }
-    .team-MERCEDES       { background-color: #00D2BE; }
-    .team-MCLAREN        { background-color: #FF8700; }
-    .team-FERRARI        { background-color: #DC0000; }
-    .team-HAAS           { background-color: #B6BABD; }
-    .team-WILLIAMS       { background-color: #005AFF; }
-    .team-RESERVE        { background-color: #FFFFFF; color: black; }
+    .team-RACING-BULLS  { background-color:#1B1443; }
+    .team-MERCEDES      { background-color:#00D2BE; }
+    .team-MCLAREN       { background-color:#FF8700; }
+    .team-FERRARI       { background-color:#DC0000; }
+    .team-HAAS          { background-color:#B6BABD; }
+    .team-WILLIAMS      { background-color:#005AFF; }
+    .team-RESERVE       { background-color:#FFFFFF; color:#000; }
   </style>
 </head>
 <body>
 
-  <div class="version">Version: Beta 0.0.37 (Number Badges)</div>
+  <div class="version">Version: Beta 0.0.38 (Image‐Key Fix + Number Badges)</div>
 
   <div class="header">
-    <img src="ifwl_logo.png" alt="IFWL Logo" />
+    <img src="ifwl_logo.png" alt="IFWL Logo"/>
     <h1>IFWL F1 Leaderboard</h1>
-    <img src="ifwl_logo.png" alt="IFWL Logo" />
+    <img src="ifwl_logo.png" alt="IFWL Logo"/>
   </div>
 
   <div class="join-series">
@@ -150,69 +110,85 @@
 
   <script>
     const sheetId = "1OxEy3fx4fW1P-aPlU-AHlPR8r23KJieLKxdtKy4koog";
+    // upper‐case keys
     const teamCars = {
-      "ALPINE":"ALPINE.webp","ASTON MARTIN":"ASTON.webp","FERRARI":"FERRARI.webp",
-      "HAAS":"HAAS.webp","MCLAREN":"MCLAREN.webp","MERCEDES":"MERCEDES.webp",
-      "RACING BULLS":"RACINGBULLS.webp","RED BULL RACING":"RBR.webp",
-      "KICK SAUBER":"SAUBER.webp","RESERVE":"RESERVE.webp","WILLIAMS":"WILLIAMS.webp"
+      ALPINE:"ALPINE.webp", "ASTON MARTIN":"ASTON.webp", FERRARI:"FERRARI.webp",
+      HAAS:"HAAS.webp", MCLAREN:"MCLAREN.webp", MERCEDES:"MERCEDES.webp",
+      "RACING BULLS":"RACINGBULLS.webp", "RED BULL RACING":"RBR.webp",
+      "KICK SAUBER":"SAUBER.webp", RESERVE:"RESERVE.webp", WILLIAMS:"WILLIAMS.webp"
     };
     const teamLogos = {
-      "ALPINE":"ALPINELOGO.webp","ASTON MARTIN":"ASTONLOGO.webp","FERRARI":"FERARRILOGO.webp",
-      "HAAS":"HAASLOGO.webp","MCLAREN":"MCLARENLOGO.webp","MERCEDES":"MERCEDESLOGO.webp",
-      "RACING BULLS":"RBLOGO.webp","RED BULL RACING":"RBRLOGO.webp",
-      "KICK SAUBER":"KICKLOGO.webp","RESERVE":"RESERVELOGO.webp","WILLIAMS":"WILLIAMSLOGO.webp"
+      ALPINE:"ALPINELOGO.webp", "ASTON MARTIN":"ASTONLOGO.webp", FERRARI:"FERARRILOGO.webp",
+      HAAS:"HAASLOGO.webp", MCLAREN:"MCLARENLOGO.webp", MERCEDES:"MERCEDESLOGO.webp",
+      "RACING BULLS":"RBLOGO.webp", "RED BULL RACING":"RBRLOGO.webp",
+      "KICK SAUBER":"KICKLOGO.webp", RESERVE:"RESERVELOGO.webp", WILLIAMS:"WILLIAMSLOGO.webp"
     };
 
-    function safeClass(team){ return "team-"+team.toUpperCase().replace(/ /g,"-"); }
+    // slug for CSS class
+    const safeClass = t=>"team-"+t.replace(/\s+/g,"-");
 
     fetch(`https://docs.google.com/spreadsheets/d/${sheetId}/gviz/tq?tqx=out:json`)
       .then(r=>r.text())
-      .then(txt=>JSON.parse(txt.substr(47).slice(0,-2)))
-      .then(json=>{
-        const rows = json.table.rows.map(r=>r.c.map(c=>c?.v||""));
-        const dBody=document.querySelector("#driver-table tbody"),
-              cBody=document.querySelector("#constructor-table tbody"),
-              uBody=document.querySelector("#unassigned-table tbody");
+      .then(t=>JSON.parse(t.substr(47).slice(0,-2)))
+      .then(j=>{
+        const rows    = j.table.rows.map(r=>r.c.map(c=>c?.v||""));
+        const dBody   = document.querySelector("#driver-table tbody");
+        const cBody   = document.querySelector("#constructor-table tbody");
+        const uBody   = document.querySelector("#unassigned-table tbody");
         dBody.innerHTML=cBody.innerHTML=uBody.innerHTML="";
-        const totals={};
+        const totals  = {};
 
         rows.forEach(r=>{
-          const raw=(r[0]||"").trim();
-          const match = raw.match(/\[\s*(\d+)\s*\]/);
-          const num   = match? match[1] : "";
-          const name  = raw.replace(/\[\s*\d+\s*\]\s*-\s*/,"");
-          const team  = (r[1]||"").trim();
-          const pts   = parseInt(r[18])||0;
+          const raw    = (r[0]||"").toString().trim();
           if(!raw) return;
+          const pts    = parseInt(r[18])||0;
+          const team   = (r[1]||"").toString().trim();
+          // extract [NNN]
+          const m      = raw.match(/\[\s*(\d+)\s*\]/);
+          const num    = m? m[1] : "";
+          // strip "[NNN] -" leaving name
+          const name   = raw.replace(/\[\s*\d+\s*\]\s*-\s*/,"");
           if(!team){
-            uBody.innerHTML += `<tr><td>${name}</td></tr>`;
+            uBody.innerHTML+=`<tr><td>${name}</td></tr>`;
             return;
           }
+          // accumulate
           totals[team] = (totals[team]||0)+pts;
+
+          // upper‐key
+          const U = team.toUpperCase();
+          const cls = safeClass(U);
+          const car = teamCars[U]   || "";
+          const logo= teamLogos[U]  || "";
+
           const tr = document.createElement("tr");
-          tr.className = "driver-row "+safeClass(team);
+          tr.className = "driver-row "+cls;
           tr.innerHTML=`
             <td>
-              ${num?`<span class="driver-number">${num}</span>`:""}
-              ${name}
+              ${num?`<span class="driver-number">${num}</span>`:""}${name}
             </td>
             <td>
-              <img src="${teamCars[team]}" class="car"  alt="${team}"/>
+              <img src="${car}" class="car"  alt="${team}"/>
               ${team}
-              <img src="${teamLogos[team]}" class="logo" alt="${team}"/>
+              <img src="${logo}"class="logo"alt="${team}"/>
             </td>
             <td>${pts}</td>`;
           dBody.appendChild(tr);
         });
 
+        // constructors
         Object.entries(totals).forEach(([team,pts])=>{
-          const tr = document.createElement("tr");
-          tr.className = "driver-row "+safeClass(team);
+          const U   = team.toUpperCase();
+          const cls = safeClass(U);
+          const car = teamCars[U]  || "";
+          const logo= teamLogos[U] || "";
+          const tr  = document.createElement("tr");
+          tr.className = "driver-row "+cls;
           tr.innerHTML=`
             <td>
-              <img src="${teamCars[team]}" class="car"  alt="${team}"/>
+              <img src="${car}" class="car"  alt="${team}"/>
               ${team}
-              <img src="${teamLogos[team]}" class="logo" alt="${team}"/>
+              <img src="${logo}"class="logo"alt="${team}"/>
             </td>
             <td>${pts}</td>`;
           cBody.appendChild(tr);
