--- a/f1leaderboard.html
+++ b/f1leaderboard.html
@@ -11,7 +11,9 @@
       background:url('ifwl_bg.webp')no-repeat center center fixed;
       background-size:cover;
     }
-    h1,h2 { text-align:center; color:#000; margin:8px 0; }
+    h1,h2 {
+      text-align:center; color:#000; margin:8px 0;
+    }
     .version {
       position:fixed; top:10px; left:10px;
       background:rgba(255,255,255,0.7); padding:2px 6px;
@@ -50,14 +52,14 @@
       opacity:1!important; filter:none!important;
     }
 
-    /* driver number badge */
+    /* driver number badge now just text */
+    .driver-cell {
+      display:flex; align-items:center; justify-content:flex-start;
+      gap:8px;
+    }
     .driver-number {
-      display:inline-block;
       font-size:2em; font-weight:bold; font-style:italic;
-      line-height:1; color:#fff;
-      background:rgba(0,0,0,0.6);
-      padding:4px 8px; margin-right:8px;
-      vertical-align:middle; border-radius:4px;
+      color:#fff; /* remove background/padding */
     }
 
     /* Team Colours */
@@ -76,7 +78,7 @@
 </head>
 <body>
 
-  <div class="version">Version: Beta 0.0.39 (Number Badge Moved)</div>
+  <div class="version">Version: Beta 0.0.40 (Badgeless Number)</div>
 
   <div class="header">
     <img src="ifwl_logo.png" alt="IFWL Logo"/>
@@ -144,7 +146,7 @@
           if(!raw) return;
           const pts  = parseInt(r[18])||0;
           const team = (r[1]||"")+"";
-          // parse [NNN]
+          // detect number in [NN]
           const m    = raw.match(/\[\s*(\d+)\s*\]/);
           const num  = m? m[1] : "";
           const name = raw.replace(/\[\s*\d+\s*\]\s*-\s*/,"");
@@ -162,7 +164,7 @@
           tr.className = cls;
           tr.innerHTML=`
             <td>${name}</td>
-            <td>
+            <td class="driver-cell">
               ${num?`<span class="driver-number">${num}</span>`:""}
               <img src="${car}" class="car" alt="${team}"/>
               ${team}
@@ -180,7 +182,7 @@
           const tr   = document.createElement("tr");
           tr.className = cls;
           tr.innerHTML=`
-            <td>
+            <td class="driver-cell">
               <img src="${car}" class="car" alt="${team}"/>
               ${team}
               <img src="${logo}" class="logo" alt="${team}"/>
